// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index.ts renders routes for nested structures with providers 1`] = `
[
  {
    "fileContent": "// WARNING: This file is generated by ngpathway module and should not be modified manually.
import { Route } from '@angular/router';
import { DashboardPageComponent } from 'src/pages/dashboard-page.component';
import { PROVIDERS as DashboardProviders } from 'src/pages/dashboard.providers';

export const ROUTES: Route[] = [
    {
        path: '',
        component: DashboardPageComponent,
        providers: [...DashboardProviders]
    },
];",
    "fileName": "index.ts",
    "path": "",
  },
  {
    "fileContent": "// WARNING: This file is generated by ngpathway module and should not be modified manually.
import { Route } from '@angular/router';
import { TeamCatalogPageComponent } from 'src/pages/Teams/team-catalog-page.component';
import { TeamDetailsLayoutComponent } from 'src/pages/Teams/[id]/(team-details)/team-details-layout.component';
import { TeamOverviewPageComponent } from 'src/pages/Teams/[id]/team-overview-page.component';
import { TeamHistoryPageComponent } from 'src/pages/Teams/[id]/history/team-history-page.component';
import { TeamCustomPageComponent } from 'src/pages/Teams/[id]/[...custom]/team-custom-page.component';
import { PROVIDERS as TeamCatalogProviders } from 'src/pages/Teams/team-catalog.providers';
import { PROVIDERS as TeamDetailsProviders } from 'src/pages/Teams/[id]/team-details.providers';

export const ROUTES: Route[] = [
    {
        path: '',
        component: TeamCatalogPageComponent,
        providers: [...TeamCatalogProviders]
    },
    {
        path: ':id',
        component: TeamDetailsLayoutComponent,
        children: [
            {
                path: '',
                component: TeamOverviewPageComponent,
                providers: [...TeamDetailsProviders]
            },
            {
                path: 'history',
                component: TeamHistoryPageComponent
            },
            {
                path: '**',
                component: TeamCustomPageComponent
            },
        ]
    },
];",
    "fileName": "Teams.index.ts",
    "path": "Teams",
  },
  {
    "fileContent": "// WARNING: This file is generated by ngpathway module and should not be modified manually.
import { Route } from '@angular/router';
import { ProductCatalogPageComponent } from 'src/pages/Products/product-catalog-page.component';
import { ProductDetailsPageComponent } from 'src/pages/Products/[id]/product-details-page.component';

export const ROUTES: Route[] = [
    {
        path: '',
        component: ProductCatalogPageComponent
    },
    {
        path: ':id',
        component: ProductDetailsPageComponent
    },
];",
    "fileName": "Products.index.ts",
    "path": "Products",
  },
]
`;

exports[`index.ts renders routes for nested structures without root route 1`] = `
[
  {
    "fileContent": "// WARNING: This file is generated by ngpathway module and should not be modified manually.
import { Route } from '@angular/router';
import { TeamCatalogPageComponent } from 'src/pages/Teams/team-catalog-page.component';
import { TeamDetailsLayoutComponent } from 'src/pages/Teams/[id]/(team-details)/team-details-layout.component';
import { TeamOverviewPageComponent } from 'src/pages/Teams/[id]/team-overview-page.component';
import { TeamHistoryPageComponent } from 'src/pages/Teams/[id]/history/team-history-page.component';
import { TeamCustomPageComponent } from 'src/pages/Teams/[id]/[...custom]/team-custom-page.component';
import { PROVIDERS as TeamCatalogProviders } from 'src/pages/Teams/team-catalog.providers';
import { PROVIDERS as TeamDetailsProviders } from 'src/pages/Teams/[id]/team-details.providers';

export const ROUTES: Route[] = [
    {
        path: '',
        component: TeamCatalogPageComponent,
        providers: [...TeamCatalogProviders]
    },
    {
        path: ':id',
        component: TeamDetailsLayoutComponent,
        children: [
            {
                path: '',
                component: TeamOverviewPageComponent,
                providers: [...TeamDetailsProviders]
            },
            {
                path: 'history',
                component: TeamHistoryPageComponent
            },
            {
                path: '**',
                component: TeamCustomPageComponent
            },
        ]
    },
];",
    "fileName": "Teams.index.ts",
    "path": "Teams",
  },
  {
    "fileContent": "// WARNING: This file is generated by ngpathway module and should not be modified manually.
import { Route } from '@angular/router';
import { ProductCatalogPageComponent } from 'src/pages/Products/product-catalog-page.component';
import { ProductDetailsPageComponent } from 'src/pages/Products/[id]/product-details-page.component';

export const ROUTES: Route[] = [
    {
        path: '',
        component: ProductCatalogPageComponent
    },
    {
        path: ':id',
        component: ProductDetailsPageComponent
    },
];",
    "fileName": "Products.index.ts",
    "path": "Products",
  },
]
`;

exports[`index.ts routesBuilder renders routes for nested structures without providers 1`] = `
[
  {
    "fileContent": "// WARNING: This file is generated by ngpathway module and should not be modified manually.
import { Route } from '@angular/router';
import { DashboardPageComponent } from 'src/pages/dashboard-page.component';

export const ROUTES: Route[] = [
    {
        path: '',
        component: DashboardPageComponent
    },
];",
    "fileName": "index.ts",
    "path": "",
  },
  {
    "fileContent": "// WARNING: This file is generated by ngpathway module and should not be modified manually.
import { Route } from '@angular/router';
import { TeamCatalogPageComponent } from 'src/pages/Teams/team-catalog-page.component';
import { TeamDetailsLayoutComponent } from 'src/pages/Teams/[id]/(team-details)/team-details-layout.component';
import { TeamOverviewPageComponent } from 'src/pages/Teams/[id]/team-overview-page.component';
import { TeamHistoryPageComponent } from 'src/pages/Teams/[id]/history/team-history-page.component';
import { TeamCustomPageComponent } from 'src/pages/Teams/[id]/[...custom]/team-custom-page.component';

export const ROUTES: Route[] = [
    {
        path: '',
        component: TeamCatalogPageComponent
    },
    {
        path: ':id',
        component: TeamDetailsLayoutComponent,
        children: [
            {
                path: '',
                component: TeamOverviewPageComponent
            },
            {
                path: 'history',
                component: TeamHistoryPageComponent
            },
            {
                path: '**',
                component: TeamCustomPageComponent
            },
        ]
    },
];",
    "fileName": "Teams.index.ts",
    "path": "Teams",
  },
  {
    "fileContent": "// WARNING: This file is generated by ngpathway module and should not be modified manually.
import { Route } from '@angular/router';
import { ProductCatalogPageComponent } from 'src/pages/Products/product-catalog-page.component';
import { ProductDetailsPageComponent } from 'src/pages/Products/[id]/product-details-page.component';

export const ROUTES: Route[] = [
    {
        path: '',
        component: ProductCatalogPageComponent
    },
    {
        path: ':id',
        component: ProductDetailsPageComponent
    },
];",
    "fileName": "Products.index.ts",
    "path": "Products",
  },
]
`;
